--- a/libft/Makefile
+++ b/libft/Makefile
@@ -13,6 +13,7 @@ SRCS	= ./ft_memset.c \
 		  ./ft_strnstr.c \
 		  ./ft_strncmp.c \
 		  ./ft_atoi.c \
+		  ./ft_atoll.c \
 		  ./ft_isalpha.c \
 		  ./ft_isdigit.c \
 		  ./ft_isalnum.c \
