--- a/libft/Makefile
+++ b/libft/Makefile
@@ -33,7 +33,8 @@ SRCS	= ./ft_memset.c \
 		  ./ft_putstr_fd.c \
 		  ./ft_putendl_fd.c \
 		  ./ft_putnbr_fd.c \
-		  ./ft_atod.c
+		  ./ft_atod.c \
+		  ./get_next_line.c
 SRCS_B = ./ft_lstnew.c \
 		 ./ft_lstadd_front.c \
 		 ./ft_lstsize.c \
